[package]
name = "tokio-stomp"
version = "0.4.0"
description = "Asynchronous streaming STOMP client"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
repository = "https://github.com/adwhit/tokio-stomp"
homepage = "https://github.com/adwhit/tokio-stomp"
keywords = ["stomp", "tokio", "streaming"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
bytes = "1.5.0"
custom_debug_derive = "0.5.1"
anyhow = "1.0.75"
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["net", "time", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
nom = "7.1.3"
log = "0.4.20"
mini-redis = "0.4.1"

[dev-dependencies]
pretty_assertions = { version = "1.4.0", features = ["unstable"] }
redis = "0.24.0"
tokio = { version = "1.35.0", features = ["time", "macros", "rt-multi-thread",  "tracing"] }
tokio-util = { version = "0.7.10", features = ["codec", "tracing", "net"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "tracing"] }
