[package]
name = "tokio-stomp"
version = "0.4.0"
description = "Asynchronous streaming STOMP client"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
repository = "https://github.com/adwhit/tokio-stomp"
homepage = "https://github.com/adwhit/tokio-stomp"
keywords = ["stomp", "tokio", "streaming"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
bytes = "1"
custom_debug_derive = "0.5"
anyhow = "1"
futures = "0.3"
tokio = { version = "1", features = ["net", "time", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
nom = "7"
log = "0.4"

[dev-dependencies]
testcontainers = { version = "0.15" }
pretty_assertions = { version = "1", features = ["unstable"] }
redis = "0.24.0"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread",  "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "tracing", "net"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["tracing-log", "tracing"] }
